# memeversion3

./: .env.example  .gitignore  Cargo.toml  PRODUCTION_CHECKLIST.md  README.md  check_morning_results.sh  docker-compose.update.patch  docker-compose.yml  monitor_and_fix.sh  prometheus.yml  test-executor-dockerfile  update_vm_env.sh  validate_env.py  vm_env_backup.txt
.github/: copilot-instructions.md
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/templates/: index.html
executor/: Cargo.toml  Dockerfile  Dockerfile.backup
executor/src/: config.rs  database.rs  event_processor.rs  executor.rs  executor_service.rs  jito_client.rs  jupiter.rs  main.rs  risk_manager.rs  signer_client.rs  strategy_manager.rs  trade_executor.rs
executor/src/strategies/: airdrop_rotation.rs  bridge_inflow.rs  dev_wallet_drain.rs  dynamic_grid.rs  korean_time_burst.rs  liquidity_migration.rs  mean_reversion.rs  mod.rs  momentum.rs  perp_basis_arb.rs  sentiment_fader.rs  volume_spike.rs
market_data_gateway/: Cargo.toml  Dockerfile
market_data_gateway/src/: main.rs
market_data_gateway/src/providers/: farcaster_consumer.rs  helius_consumer.rs  mod.rs  pyth_consumer.rs  twitter_consumer.rs
portfolio_manager/: Cargo.toml  Dockerfile  Dockerfile.backup
portfolio_manager/src/: backtest_client.rs  config.rs  main.rs  main_clean_test.rs  state_manager.rs
position_manager/: Cargo.toml  Dockerfile
position_manager/src/: config.rs  database.rs  jupiter.rs  main.rs  position_monitor.rs  signer_client.rs
scripts/: deploy_vm_gcp.sh  production_health_monitor.sh  production_readiness_check.sh
shared-models/: Cargo.toml
shared-models/src/: circuit_breaker.rs  lib.rs
signer/: Cargo.toml  Dockerfile
signer/src/: main.rs
strategy_factory/: Dockerfile  factory.py  requirements.txt
