[package]
name = "executor"
version = "25.0.0"
edition = "2021"

[dependencies]
# Internal
shared-models = { path = "../shared-models" }

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Web & API
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

# Solana & Jito
solana-client = "1.18"
solana-sdk = "1.18"
# jito-searcher-client = { git = "https://github.com/jito-labs/searcher-client-rust.git", tag = "v0.4.0", features = ["ws"] }

# Database & Storage
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp"] }

# Utilities
anyhow = "1.0"
base64 = "0.22"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lazy_static = "1.4.0"
inventory = "0.1"
rand = "0.8"
chrono-tz = "0.8"

# Drift (commented out for initial deployment - will re-enable for live trading)
# drift-sdk = { git = "https://github.com/drift-labs/drift-rs.git", tag = "v2.107.0" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
