[package]
name = "portfolio_manager"
version = "24.0.0"
edition = "2021"

[dependencies]
shared-models = { path = "../shared-models" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
statrs = "0.16"
lazy_static = "1.4.0"
httpx = "0.4"

[[bin]]
name = "portfolio_manager"
path = "src/main.rs"
