[package]
name = "portfolio_manager"
version = "25.0.0"
edition = "2021"

[dependencies]
shared-models = { path = "../shared-models" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
statrs = "0.16"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"

[[bin]]
name = "portfolio_manager"
path = "src/main.rs"
