[package]
name = "position_manager"
version = "24.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
shared-models = { path = "../shared-models" }
redis = { version = "0.25", features = ["tokio-comp"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
solana-sdk = "1.18"
bincode = "1.3"