[package]
name = "signer"
version = "24.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.21"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shared-models = { path = "../shared-models" }